Modificando styles e idioma

--- a/src/Styles/card.css
+++ b/src/Styles/card.css
@@ -1,10 +1,11 @@
+
 .card {
     width: 250px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    background-color: skyblue
+   
   }
 
   .card{
@@ -15,6 +16,7 @@
     width: 200px;
     padding: 0.5rem 0.5rem 0 0.5rem;
     border: 0.5px solid rgb(136, 136, 136);
+    
     
   }
 
@@ -55,5 +57,5 @@
   
   }
   .favButton:hover {
-    background-color: #1bcde1;
+    background-color: #86e6f0;
   }
