--- a/src/Styles/detail.css
+++ b/src/Styles/detail.css
@@ -13,7 +13,10 @@
     font-size: 1.2rem;
     color: var(--detail-subtext-color);
   }
-  
+  .detalleGeneral {
+    text-align: center;
+    min-height: 77vh;
+  }
   .detail-container {
     background-color: rgb(212, 245, 250);
     padding: 2rem;
@@ -21,5 +24,23 @@
     margin: 2rem auto;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    
   }
-
+  table {
+    border-collapse: collapse;
+       border-spacing: 0;
+       width: 100%;
+       display: table;
+       border: 1px solid #ccc;
+   
+   }
+   
+   td, th {
+     border: 1px solid #dddddd;
+     text-align: left;
+     padding: 8px;
+   }
+   
+   tr:nth-child(even) {
+     background-color: #dddddd;
+   }
