--- a/src/Styles/form.css
+++ b/src/Styles/form.css
@@ -1,24 +1,26 @@
 
 .contact-container {
-    width: 100%;
     padding: 20px;
     background-color: rgb(212, 245, 250);
     color: #333;
     text-align: center;
+    min-height: 77vh;
+      
   }
   
   .contact-container h2 {
     font-size: 2rem;
     color: #333;
-    margin-bottom: 10px;
   }
   
   .contact-container p {
     font-size: 1.2rem;
     color: #555;
   }
-  
-  
+
+   label{
+    padding: 5px;
+   }
   button { 
     padding: 5px 5px;
      color:black;
@@ -31,6 +33,9 @@
   flex-direction: column;
   justify-content: space-around;
   width: 300px;
-  height: 100px;
   margin: 0 auto;
+}
+
+textarea {
+  min-height: 100px; 
 }
