--- a/src/Styles/form.css
+++ b/src/Styles/form.css
@@ -1,7 +1,7 @@
 
 .contact-container {
     padding: 20px;
-    background-color: rgb(212, 245, 250);
+    background-color: #538083;
     color: #333;
     text-align: center;
       
@@ -14,11 +14,17 @@
   
   .contact-container p {
     font-size: 1.2rem;
-    color: #555;
+    color: #ffffff;
   }
 
    label{
     padding: 5px;
+    font-weight: bold;
+
+   }
+   .dark button {
+    background-color: white;
+    color: black;
    }
   button { 
     padding: 5px 5px;
@@ -26,6 +32,11 @@
     margin-top: 4px;
     border-radius: 2px;
     cursor: pointer;
+    padding: 12px 20px;
+    border-radius: 25px; 
+    border: none;
+    font-size: 1rem;
+    
   }
   form{
   display: flex;
@@ -33,8 +44,24 @@
   justify-content: space-around;
   width: 300px;
   margin: 0 auto;
-}
+} 
 
 textarea {
-  min-height: 100px; 
+  width: 100%;
+  height:80px
+ 
 }
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 5px;
+  border-radius: 5px; 
+  border: none; 
+  outline: none;
+  font-size: 0.8em;
+  background-color: #c8c8c8; 
+  color: #000; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+}
+
