--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -12,47 +12,35 @@
      width: 80vw;
     justify-content: flex-end;
     padding: 0.5rem;
-   box-shadow: -10px 0 15px -5px #638cb5, 10px 0 15px -5px #4f8a8e;
+    box-shadow: 1px 2px 8px -2px #81f0ed;
    border-radius:3rem;
   }
-  
-  .dark nav a {
-    color: white;
-  }
-  
+
   .navbar .nav-links {
-    color: #fff;
     text-decoration: none;
-    font-size: 1.1rem;
+    font-size: 1rem;
     transition: all 0.3s ease;
     padding: 7px;
-    
+    font-weight: 600;
   }
   
   .navbar .nav-links:hover {
     color: #ffffff;
   }
-
-  .light-mode {
-    background-color: #538083;
-    color: #333;
-  }
-  
-  .dark-mode {
-    background-color: #12121296;
-    color: #fff;
-    
-  }
+.dark .navbar .nav-links{
+  color: #ffffff;
+}
   
   .theme-toggle {
     margin-left: 20px;
     padding: 0px 15px 0px 10px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     cursor: pointer;
     transition: all 0.3s ease;
     background-color: #538083;
   }
-  
-  .theme-toggle .dark {
-       border: 2px solid #538083;
-  }
+
+.dark .theme-toggle {
+  background-color: #20393a;
+}
+ 
