--- a/src/Styles/detail.css
+++ b/src/Styles/detail.css
@@ -39,6 +39,7 @@
     margin: 2rem auto;
     padding: 20px 40px;
     border-radius: 15px;
+    background-color: #20393a;
     box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
     width: 400px;
     text-align: center;
@@ -48,13 +49,4 @@
   {
     color: rgb(214, 218, 217);
   }
-  .dark .detail-container {
-    padding: 2rem;
-    max-width: 800px;
-    margin: 2rem auto;
-    background-color: #20393a;;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    
-  }
-  
+ 
